<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2025 UniCro, Inc US. All rights reserved.
This software is proprietary and may not be copied, modified, or distributed
without explicit permission from UniCro, Inc US. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startScanning_wifi"
        android:layout_width="250dp"
        android:layout_height="87dp"
        android:backgroundTint="#ACB0B1"
        android:forceDarkAllowed="true"
        android:foregroundTint="@color/colorPrimary"
        android:soundEffectsEnabled="true"
        android:text="@string/scan_wifi"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="556dp" />

    <Button
        android:id="@+id/startScanning_nfc"
        android:layout_width="253dp"
        android:layout_height="79dp"
        android:backgroundTint="#FFEE58"
        android:text="@string/scan_nfc"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="188dp" />

    <Button
        android:id="@+id/startScanning_bt"
        android:layout_width="251dp"
        android:layout_height="71dp"
        android:backgroundTint="#FFEE58"
        android:text="@string/scan_bt"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="267dp" />

    <Button
        android:id="@+id/startScanning_uwb"
        android:layout_width="251dp"
        android:layout_height="68dp"
        android:backgroundTint="#FFEE58"
        android:text="@string/scan_uwb"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="338dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="428dp"
        android:layout_height="90dp"
        android:forceDarkAllowed="true"
        android:singleLine="false"
        android:text="@string/hello_uniscout"
        android:textAlignment="textStart"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="429dp"
        android:layout_height="44dp"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="144dp" />

    <Button
        android:id="@+id/startScanning_all"
        android:layout_width="250dp"
        android:layout_height="84dp"
        android:backgroundTint="#EB0909"
        android:text="@string/scan_all"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="472dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/startScanning_ble"
        android:layout_width="249dp"
        android:layout_height="66dp"
        android:text="@string/scan_ble"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="406dp" />

    <Button
        android:id="@+id/support_button"
        android:layout_width="134dp"
        android:layout_height="70dp"
        android:text="@string/support_text"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="658dp" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="132dp"
        android:layout_height="70dp"
        android:text="@string/about_text"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="658dp" />

</androidx.constraintlayout.widget.ConstraintLayout>